FIX: Grid header was not aligned with  the first column data (#585)

--- a/frontend-html/src/gui/connections/MobileComponents/Grid/DataViewHeader.module.scss
+++ b/frontend-html/src/gui/connections/MobileComponents/Grid/DataViewHeader.module.scss
@@ -1,4 +1,4 @@
-div:global(.dataViewHeader){
+div:global(.mobileDataViewHeader){
   padding-left: 13px;
   padding-right: 20px;
 }
